Some tweaking of 4 year old code

--- a/README
+++ b/README
@@ -1,1 +1,9 @@
+## Simple Facebook Auth Controller for Codeigniter
+
 More info here: http://www.terrymatula.com/development/2011/simple-facebook-codeigniter-authorization/
+
+1. Make sure you have all the keys and stuff from Facebook set up.
+2. Your "Facebook Login" should link to "facebook/"
+3. Everything else should works.
+
+
